fixed quote logo truncation

--- a/gui/src/styles/trill.css
+++ b/gui/src/styles/trill.css
@@ -19,6 +19,17 @@
   border-top: 1px solid var(--text-color);
 }
 
+.trill-post:first-child {
+  border-top: none;
+}
+
+/* trill-post:last-child { */
+/* border-bottom: 1px solid var(--text-color); */
+/* } */
+
+
+
+
 .trill-post {
   position: relative;
   display: flex;
@@ -134,7 +145,7 @@
       word-break: break-word;
     }
 
-    -paragraph {
+    .paragraph {
       margin-block-start: 1em;
       margin-block-end: 1em;
     }
@@ -164,15 +175,6 @@
       color: var(--text);
     }
   }
-
-  trill-post:first-child {
-    border-top: none;
-  }
-
-  trill-post:last-child {
-    border-bottom: 1px solid var(--text-color);
-  }
-
 
 
 
@@ -276,12 +278,16 @@
   margin: 0.5rem 0;
 }
 
+.trill-post-card.ref-card {
+  margin-top: 1rem;
+  margin-left: 1rem;
+}
+
 .trill-post-card-logo {
   position: absolute;
-  width: 25px;
-  height: 25px;
   top: -17px;
   left: -17px;
+
 }
 
 #post-menu {
